Fixed-sized blocks for uploaded files to avoid distortion during drag and drop.

--- a/src/ui/control/richtexteditor/media/UploadedFile.css
+++ b/src/ui/control/richtexteditor/media/UploadedFile.css
@@ -1,11 +1,25 @@
 .rich-text-editor-uploaded-file {
-    display: inline-grid;
     grid-template-columns: 2.5rem 1fr;
     align-items: start;
     padding: .25rem .5rem .25rem 0;
     margin: .5rem;
     background-color: var(--bs-gray-100);
     border-radius: .5rem;
+    cursor: pointer;
+}
+
+@media only screen and (min-width: 992px) {
+    .rich-text-editor-uploaded-file {
+        display: inline-grid;
+        width: calc(50% - 1rem);
+    }
+}
+
+@media only screen and (max-width: 991px) {
+    .rich-text-editor-uploaded-file {
+        display: grid;
+        width: calc(99.6vw - 4rem);
+    }
 }
 
 .rich-text-editor-uploaded-file.dragged {
@@ -20,11 +34,4 @@
 .rich-text-editor-uploaded-file .file-name {
     padding: .3rem .25rem 0;
     overflow-wrap: break-word;
-    cursor: vertical-text;
-    border: 1px solid transparent;
-    border-radius: .25rem;
-}
-
-.rich-text-editor-uploaded-file .file-name:hover {
-    border-color: var(--bs-gray-300);
 }
